--- a/Notebook/twitter_emotion_detection.ipynb
+++ b/Notebook/twitter_emotion_detection.ipynb
@@ -2521,7 +2521,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2535,9 +2535,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
